--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,12 @@ body {
 h1 {
     color: cadetblue;
     font-size: 50px;
-    padding-bottom: 50px;
     font-style: italic;
 }
 h2 {
     color: darksalmon;
     font-size: 45px;
+    padding-top: 20px;
     font-style: italic;
 }
 h3 {
